# OrbbecCapture

./: README.md
cpp/: CMakeLists.txt  ONI_capture.cpp  README.md
python/: ONI_capture.py  README.md
